Bug 168438 - inserting points by coordinates crashes kig
Summary: inserting points by coordinates crashes kig
Status: RESOLVED FIXED
Alias: None
Product: kig
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Pino Toscano
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-05 18:17 UTC by Jiri Palecek
Modified: 2008-08-05 19:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jiri Palecek 2008-08-05 18:17:37 UTC
Version:            (using KDE 4.1.0)
Installed from:    Debian testing/unstable Packages

When I create a point by pressing "f" and entering eg. "0;0", kig crashes.

This didn't happen till 4.0.66
Comment 1 Pino Toscano 2008-08-05 19:00:51 UTC
SVN commit 842633 by pino:

Do not copy the document, it is not a good idea...

BUG: 168438


 M  +9 -8      kiginputdialog.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842633
Comment 2 Pino Toscano 2008-08-05 19:03:10 UTC
SVN commit 842634 by pino:

Forwardport: do not copy the document.

CCBUG: 168438


 M  +9 -8      kiginputdialog.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842634
Comment 3 Pino Toscano 2008-08-05 19:04:18 UTC
Forgot to add: this will be in KDE 4.1.1.

Thanks for the report!