Do not copy the document, it is not a good idea...

BUG: 168438

svn path=/branches/KDE/4.1/kdeedu/kig/; revision=842633